fix: tweaked spacing issues to span and h1

--- a/blog-preview-card/index.css
+++ b/blog-preview-card/index.css
@@ -46,7 +46,6 @@ span {
   font-weight: bold;
   margin-top: 24px;
   border-radius: 4px;
-  margin-bottom: 12px;
 }
 
 .card-date {
@@ -57,7 +56,7 @@ span {
 
 h1 {
   margin-block: 0;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
   font-size: 24px;
 }
 
